# pythonnet-stubs

./: .gitignore  LICENSE  MANIFEST.in  README.md  model_test.py  pyproject.toml  setup.cfg  setup.py  stub_gen.py  stub_tests.py  tox.ini
Internal-stubs/Cryptography/: __init__.pyi
Microsoft-stubs/CSharp/: __init__.pyi
Microsoft-stubs/Reflection/: __init__.pyi
Microsoft-stubs/VisualBasic/: __init__.pyi
Microsoft-stubs/Win32/: __init__.pyi
System/: Dynamic.pyi  Resources.pyi  Web.pyi  __init__.pyi  util.py
System-stubs/: __init__.pyi
System-stubs-old/: Drawing.pyi  Globalization.pyi  Namespace.pyi  Numerics.pyi  Timers.pyi  __init__.pyi  util.py
System-stubs-old/Collections/: __init__.pyi
generator3/: __main__.py  clr_tools.py  constants.py  core.py  docstring_parsing.py  extra.py  module_redeclarator.py  util_methods.py
pythonnet_stub_generator/: __main__.py  logging.py  make_stubs.py  model.py  options.py  util.py
stub-generator/: __main__.py  defaults.py  logger.py  logging.py  make_stubs.py  make_stubs_old.py  model.py  options.py  util.py
stub_generator/: __main__.py  defaults.py  make_stubs.py  make_stubs_old.py  model.py  model2.py  util.py
stubs/System.Core-stubs/: LICENSE  MANIFEST.in  README.md  setup.cfg
stubs/System.Core-stubs/Internal-stubs/Cryptography/: __init__.pyi
stubs/System.Core-stubs/Microsoft-stubs/Runtime/Hosting/: __init__.pyi
stubs/System.Core-stubs/Microsoft-stubs/Win32/: __init__.pyi
stubs/System.Core-stubs/Microsoft-stubs/Win32/SafeHandles/: __init__.pyi
stubs/System.Core-stubs/System-stubs/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Collections/Generic/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Collections/Immutable/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Collections/ObjectModel/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Configuration/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Deployment/Internal/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Deployment/Internal/Isolation/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Diagnostics/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Diagnostics/CodeAnalysis/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Diagnostics/Contracts/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Diagnostics/Eventing/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Diagnostics/Eventing/Reader/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Diagnostics/PerformanceData/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Diagnostics/Tracing/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Dynamic/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Dynamic/Utils/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Globalization/: __init__.pyi
stubs/System.Core-stubs/System-stubs/IO/: __init__.pyi
stubs/System.Core-stubs/System-stubs/IO/IsolatedStorage/: __init__.pyi
stubs/System.Core-stubs/System-stubs/IO/MemoryMappedFiles/: __init__.pyi
stubs/System.Core-stubs/System-stubs/IO/Pipes/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Linq/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Linq/Expressions/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Linq/Expressions/Compiler/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Linq/Parallel/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Management/Instrumentation/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Reflection/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Reflection/Emit/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Reflection/Internal/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Reflection/Metadata/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Reflection/Metadata/Ecma335/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Reflection/PortableExecutable/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Resources/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Runtime/CompilerServices/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Runtime/ConstrainedExecution/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Runtime/InteropServices/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Runtime/InteropServices/Expando/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Runtime/Remoting/Activation/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Runtime/Remoting/Metadata/W3cXsd2001/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Runtime/Serialization/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Runtime/Serialization/Formatters/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Security/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Security/Claims/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Security/Cryptography/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Security/Cryptography/X509Certificates/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Security/Cryptography/Xml/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Security/Permissions/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Security/Util/: __init__.pyi
stubs/System.Core-stubs/System-stubs/StubHelpers/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Text/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Threading/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Threading/Tasks/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Xml/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Xml/Resolvers/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Xml/Schema/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Xml/Serialization/Configuration/: __init__.pyi
stubs/System.Core-stubs/System-stubs/Xml/XmlConfiguration/: __init__.pyi
stubs/System.Core-stubs/Windows-stubs/Foundation/Diagnostics/: __init__.pyi
test/: TestLib_1.0.0.0_doc.json  TestLib_1.0.0.0_skeleton.json  experiment_clr_loader.py  experiment_doc.py  experiment_doc_gen.py  experiment_extracting.py  experiment_lib.py  experiment_to_file.py  temp_merge_docs.py  test_base.py  test_build.py  test_extract.py  test_model.py
(+530 files in other folders)
