# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[project]
name = "stubgen"
#version = ""  # Defined by setuptools_scm
description = "A library for generating stubs of .NET libraries"
readme = { file = "README.md", content-type = "text/markdown" }
#license = { file = "LICENSE" }
authors = [
    { name = "Ryan Smith", email = "Ryan.Smith1215@gmail.com" },
]
maintainers = []
keywords = [
    "pythonnet",
    "generator",
    "code generating code",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Flake8",
    "Framework :: Pytest",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "pythonnet>=3.0.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.12.4",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Mimer29or40/pythonnet-stubs"
Download = "https://github.com/Mimer29or40/pythonnet-stubs/releases"
Source = "https://github.com/Mimer29or40/pythonnet-stubs"
Documentation = "https://github.com/Mimer29or40/pythonnet-stubs/wiki"
"Issue Tracker" = "https://github.com/Mimer29or40/pythonnet-stubs/issues"

[project.scripts]
stubgen = "stubgen.__main__:main"

[project.optional-dependencies]
tests = [
    "tox>=4.27.0",
    "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "__version__.py"
local_scheme = "no-local-version"

[tool.ruff]
# https://docs.astral.sh/ruff/settings/
fix = true
line-length = 100

[tool.ruff.format]
# https://docs.astral.sh/ruff/settings/#format
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/settings/#lint
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "N", # pep8-naming
    "D", # pydocstyle
    "UP", # pyupgrade
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "FA", # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "LOG", # flake8-logging
    "G", # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TC", # flake8-type-checking
    "INT", # flake8-gettext
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "TD", # flake8-todos
    "FIX", # flake8-_fixme
    "ERA", # eradicate
    "PD", # pandas-vet
    "PGH", # pygrep-hooks
    "C", # Pylint PL Convention
    "E", # Pylint PL Error
    "R", # Pylint PL Refactor
    "W", # Pylint PL Warning
    "TRY", # tryceratops
    "FLY", # flynt
    "NPY", # NumPy-specific rules
    "AIR", # Airflow
    "PERF", # Perflint
    "FURB", # refurb
    "RUF", # Ruff-specific rules
]
ignore = [
    "N999", # pep8-naming: Invalid module name
    "D203", # pydocstyle: 1 blank line required before class docstring
    "D213", # pydocstyle: Multi-line docstring summary should start at the second line
    "COM812", # flake8-commas: missing trailing comma
    "DTZ001", # flake8-datetimez: `datetime.datetime()` called without a `tzinfo` argument
    "DTZ005", # flake8-datetimez: `datetime.datetime.now()` called without a `tz` argument
    "TD003", # flake8-fixmes: Missing issue link for this _TODO
    "FIX002", # flake8-todos: Line contains _TODO, consider resolving the issue
    "TRY003", # tryceratops: Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = [
    "N802",  # pep8-naming: Function name `Data` should be lowercase
    "N803",  # pep8-naming: Argument name `innerException` should be lowercase
    "N818",  # pep8-naming: Exception name `AggregateException` should be named with an Error suffix
    "D205",  # pydocstyle: 1 blank line required between summary line and description
    "D418",  # pydocstyle: Function decorated with `@overload` shouldn't contain a docstring
    "D419",  # pydocstyle: Docstring is empty
    "PYI021",  # flake8-pyi: Docstrings should not be included in stubs
]
"test/*" = [
    "T201", # print found
    "T203", # pprint found
    "INP001", # flake8-no-pep420 - File is part of an implicit namespace package.
]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
force-single-line = true
known-third-party = ["System", "Microsoft", "Internal", "Accessibility", "MS"]
known-first-party = ["stubgen"]
required-imports = ["from __future__ import annotations"]
