[metadata]
name = stub-generator
version = 0.0.1
author = Ryan Smith
author_email = NotReal@email.com
url = https://www.notreal.com/
description = Stubs for pythonnet
long_description = file: README.md, LICENSE
;keywords = one, two
license = MIT License
classifiers =
    Development Status :: 1 - Planning
;    Development Status :: 2 - Pre-Alpha
;    Development Status :: 3 - Alpha
;    Development Status :: 4 - Beta
;    Development Status :: 5 - Production/Stable
;    Development Status :: 6 - Mature
;    Development Status :: 7 - Inactive
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Version Control :: Git
    Topic :: Utilities

[options]
packages = find:
;extras_require =
install_requires =
    docopt
    pythonnet==2.5.2
python_requires = >=3.8

[options.package_data]
;* = *.txt, *.rst
;hello = *.msg

[options.entry_points]
;console_scripts =
;    executable-name = package.module:function

[options.packages.find]
exclude =
;    src.subpackage1
;    src.subpackage2
