[metadata]
name = System.Core-stubs
version = 4.0.0.0
description = Stubs Package for System.Core
long_description = file: README.md, LICENSE
keywords = pythonnet, stubs, System.Core
license = MIT License
culture = neutral
public_key_token = b77a5c561934e089
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Documentation
    Topic :: Utilities

[options]
packages = find:
install_requires =
    pythonnet==2.5.2
python_requires = >=3.8
